Update table listing Java 17 support on the website